<resources>
    <string name="app_name">OrderFood</string>
    <string name="name_food">Name Food</string>
    <string name="price_food">Price Food</string>
    <string name="dangky">Đăng ký</string>
    <string name="tendangnhap">Tên đăng nhập</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="birthday">Ngày sinh</string>
    <string name="CMND">CMND</string>
    <string name="dongy">Đồng ý</string>
    <string name="thoat">Thoát</string>
    <string name="nhaptendangnhap">Vui lòng nhập tên đăng nhập!</string>
    <string name="nhapmatkhau">Vui lòng nhập mật khẩu!</string>
    <string name="themthanhcong">Thêm thành công!</string>
    <string name="themthatbai">Thêm Thất bại!</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="trangchu">Trang chủ</string>
    <string name="thucdon">Thực đơn</string>
    <string name="nhanvien">Nhân viên</string>
    <string name="thongke">Thống kê</string>
    <string name="caidat">Cài đặt</string>
    <string name="dangnhapthanhcong">Đăng nhập thành công!</string>
    <string name="dangnhapthatbai">Đăng nhập thất bại!</string>
    <string name="mo">Mở</string>
    <string name="dong">Đóng</string>
    <string name="thembanan">Thêm bàn ăn</string>
    <string name="tenbanan">Tên Bàn Ăn</string>
    <string name="tenmonan">Tên món ăn</string>
    <string name="giatien">Giá tiền</string>
    <string name="themthucdon">Thêm thực đơn</string>
    <string name="banan">Bàn ăn</string>
    <string name="loaithucdon">Loại thực đơn</string>
    <string name="tenloai">Tên Loại</string>
    <string name="vuilongnhapdulieu">Vui lòng nhập dữ liệu!</string>
    <string name="loithemmonan">Vui lòng điền đầy đủ thông tin</string>
    <string name="gia">Giá : </string>
    <string name="themsoluong">Số lượng</string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="tongtien">Tổng tiền : </string>
    <string name="thanhtoanthanhcon">Thanh toán thành công</string>
    <string name="loi">Lỗi!</string>
    <string name="sua">Sửa</string>
    <string name="xoa">Xóa</string>
    <string name="xoathanhcong">Xóa thành công</string>
    <string name="suathanhcong">Sửa thành công</string>
    <string name="themnhanvien">Thêm nhân viên</string>
    <string name="sodienthoai">Số điện thoại</string>
</resources>