<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/size10dp"

        >
        <TextView
            android:id="@+id/txtTenMonAnThanhToan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tenmonan"
            android:layout_weight="1"
            android:padding="@dimen/size10dp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/txtSoLuongThanhToan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/themsoluong"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:padding="@dimen/size10dp"/>
        <TextView
            android:id="@+id/txtGiaTienThanhToan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/giatien"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:padding="@dimen/size10dp"/>

    </LinearLayout>

</LinearLayout>